<resources>
    <string name="app_name">Cinemate</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_desc">Have a Epic Movie!</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="start_now">Login / Register</string>
    <string name="skip">Skip ></string>

    <!-- Onboarding Title -->
    <string name="onboarding_title_1">Selamat Datang di Cinemate</string>
    <string name="onboarding_title_2">Temukan Film Terbaru</string>
    <string name="onboarding_title_3">Pesan Tiket dengan Mudah</string>
    <string name="onboarding_title_4">Nikmati Pengalaman Menonton yang Tak Terlupakan</string>

    <!-- Onboarding Description -->
    <string name="onboarding_desc_1">Cari film, lihat jadwal, pesan tiket cepat.</string>
    <string name="onboarding_desc_2">Temukan film yang Anda sukai.</string>
    <string name="onboarding_desc_3">Pesan tiket dalam beberapa langkah.</string>
    <string name="onboarding_desc_4">Nikmati film favorit dengan kenyamanan.</string>


    <string name="Login">Login</string>
    <string name="please_input">Please input your email and password!.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pass_less_than_8_char">Password harus terdiri dari minimal 8 karakter.</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="Register">Register</string>
    <string name="name">Name</string>
    <string name="input_email">Input Email</string>
    <string name="input_password">Input Password</string>
    <string name="con_tinue">Continue</string>
    <string name="error">Error</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="success">Success</string>
    <string name="input_name">Input Name</string>
    <string name="registration_success">Registration Success</string>
    <string name="your_web_client_id">342216530624-ib7r7b7533gglbafa094vr74hn4pj4qa.apps.googleusercontent.com</string>
    <string name="search">Search</string>
    <string name="title_prefix">Judul :</string>
    <string name="genres_prefix">Genre :</string>
    <string name="average_rating_prefix">Average Rating :</string>
    <string name="star_icon">Stars</string>
    <string name="genre_icon">Genre</string>

</resources>