<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OnboardingActivity"
    app:layoutDescription="@xml/activity_onboarding_scene">

    <ImageView
        android:id="@+id/app_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/cinemate"
        android:textAlignment="center"
        android:textStyle="bold"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_skip"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/skip"
        android:textSize="10sp"
        android:textColor="@color/blue"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:importantForAccessibility="no"
        android:src="@drawable/image_1"
        android:layout_marginTop="50dp"

        app:layout_constraintTop_toTopOf="@id/menu1"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/titleMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/onboarding_title_1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/logoMenu1"
        app:layout_constraintStart_toStartOf="@id/logoMenu1"
        app:layout_constraintTop_toBottomOf="@id/logoMenu1" />

    <TextView
        android:id="@+id/descMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/onboarding_desc_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/titleMenu1"
        app:layout_constraintStart_toStartOf="@id/titleMenu1"
        app:layout_constraintTop_toBottomOf="@id/titleMenu1" />

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/image_2"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@id/menu1"
        app:layout_constraintVertical_bias="0.3"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/titleMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/onboarding_title_2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/logoMenu2"
        app:layout_constraintStart_toStartOf="@id/logoMenu2"
        app:layout_constraintTop_toBottomOf="@id/logoMenu2" />

    <TextView
        android:id="@+id/descMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/onboarding_desc_2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/titleMenu2"
        app:layout_constraintStart_toStartOf="@id/logoMenu2"
        app:layout_constraintTop_toBottomOf="@id/titleMenu2" />

    <ImageView
        android:id="@+id/logoMenu3"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/image_3"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@id/menu1"
        app:layout_constraintVertical_bias="0.3"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/titleMenu3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/onboarding_title_3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/logoMenu3"
        app:layout_constraintStart_toStartOf="@id/logoMenu3"
        app:layout_constraintTop_toBottomOf="@id/logoMenu3" />

    <TextView
        android:id="@+id/descMenu3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/onboarding_desc_3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/titleMenu3"
        app:layout_constraintStart_toStartOf="@id/titleMenu3"
        app:layout_constraintTop_toBottomOf="@id/titleMenu3" />

    <ImageView
        android:id="@+id/logoMenu4"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/image_4"
        app:layout_constraintTop_toTopOf="@id/menu1"
        app:layout_constraintVertical_bias="0.3"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/titleMenu4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/onboarding_title_4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/logoMenu4"
        app:layout_constraintStart_toStartOf="@id/logoMenu4"
        app:layout_constraintTop_toBottomOf="@id/logoMenu4" />

    <TextView
        android:id="@+id/descMenu4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/onboarding_desc_4"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/titleMenu4"
        app:layout_constraintStart_toStartOf="@id/titleMenu4"
        app:layout_constraintTop_toBottomOf="@id/titleMenu4" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        app:altSrc="@drawable/baseline_circle_24"
        app:srcCompat="@drawable/outline_circle_24"
        app:tint="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/baseline_circle_24"
        app:srcCompat="@drawable/outline_circle_24"
        app:tint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/baseline_circle_24"
        app:srcCompat="@drawable/outline_circle_24"
        app:tint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toStartOf="@+id/menu4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        app:altSrc="@drawable/baseline_circle_24"
        app:srcCompat="@drawable/outline_circle_24"
        app:tint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/menu3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu3"
        app:layout_constraintTop_toTopOf="@+id/menu3"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/start_now"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descMenu4" />



</androidx.constraintlayout.motion.widget.MotionLayout>